--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-fuzzy-search": "^2.2.0",
     "strapi-plugin-multi-select": "^1.2.2",
     "styled-components": "5.3.3"
   },
