--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "5.3.4",
     "strapi-plugin-fuzzy-search": "^2.2.0",
     "strapi-plugin-multi-select": "^1.2.2",
+    "strapi-provider-upload-azure-storage": "^3.3.0",
     "styled-components": "5.3.3"
   },
   "engines": {
