--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "strapi": {
     "uuid": "35a970c6-ec9f-4c91-a7e6-533866bcfac5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3"
   }
 }
