--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           npm ci --omit=dev
 
       - name: Zip artifact for deployment
-        run: zip --symlink release.zip ./* -r
+        run: zip --symlink release.zip ./* .env .strapi -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
