--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "4.15.4",
-    "@strapi/plugin-graphql": "^4.15.4",
-    "@strapi/plugin-i18n": "4.15.4",
-    "@strapi/plugin-users-permissions": "4.15.4",
+    "@strapi/plugin-cloud": "4.16.2",
+    "@strapi/plugin-graphql": "^4.16.2",
+    "@strapi/plugin-i18n": "4.16.2",
+    "@strapi/plugin-users-permissions": "4.16.2",
     "@strapi/strapi": "4.16.2",
     "better-sqlite3": "9.2.2",
     "mysql": "^2.18.1",
@@ -39,5 +39,8 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3"
+  },
+  "overrides": {
+    "graphql": "^16"
   }
 }
