feat: localで本番を試せるようにする

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "strapi build",
-    "develop": "strapi develop",
+    "dev": "strapi develop",
+    "dev:production": "source .env.production.local && strapi develop",
     "start": "node_modules/.bin/strapi start",
     "strapi": "strapi"
   },
