chore: apple siliconでbuildするケースに対応

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,9 @@ build
 # certificates
 ############################
 *.pem
+
+############################
+# azure
+############################
+.vscode
+.deployment
