--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "sharp": "^0.33.2",
     "strapi-plugin-fuzzy-search": "^2.2.0",
     "strapi-plugin-multi-select": "^1.2.2",
     "strapi-provider-upload-azure-storage": "^3.3.0",
